	* Better tracking for files, when they are not cached, open path to them
	* In windows can choice between devices (C:\, D:\,...)
	* Language files
	(DONE) Saving state of Showbars in config file everytime where is changed
	(DONE) oneclick document opening
	(DONE) filter separating ex.: "*.c;*.cpp;*.h"
	* Fix possible memory leaks (using g_free... where is need)
	* Folowing path from current document view
	(DONE) Hide object files as native filebroser (*.o;*.a;*.so;*.dll;*.lib..)
	(DONE) Using font from geany settings for sidebar
	* Migrating to stash
	(DONE) Adding keybindings for renaming/deleting/refreshing
	(DONE) Add option to change bars position // requested by <dmaphy>
	(DONE) Add option to autorename point the newest created objects by the Treebrowser


+-------------------------------+
| Development release ChangeLog |
+-------------------------------+


16-10-2010 	Adrian Dimitrov 		<dimitrov.adrian@gmail.com>

	* src/treebrowser.c
		Fixed gio troubles (BIG THANKS TO Colomban Wendling)

		Fixed unref data in utils_pixbuf_from_path()
		Changed default icon for bookmarks to GTK_STOCK_HOME

		Added new option to show mime-type icons (can be configured by the preferences)
			(Idea from Colomban Wendling`s mail)


09-10-2010 	Adrian Dimitrov 		<dimitrov.adrian@gmail.com>

	* src/treebrowser.c
		Fixed possible segfault when deleting file which is in bookmarks tree
		Fixed wrong Show toolbars state when it turned off from the plugin configuration
		Fixed collapsing and preloading bookmarks list when renaming, and deleting objects
	* README
		Try to add screenshot for the website

09-10-2010 	Adrian Dimitrov 		<dimitrov.adrian@gmail.com>

	* src/treebrowser.c
		Fixes possible segfaults with bookmarks in ubuntu 10.10
	* README
		Update and fixes website compitables

09-10-2010 	Adrian Dimitrov 		<dimitrov.adrian@gmail.com>

	* src/treebrowser.c
		Fixed translatable info
			(thanks to Frank Lanitz  <frank(at)frank(dot)uvena(dot)de> for patch)