@@ -31,6 +31,7 @@ Features
 Requirements
 ============
  * GTK >= 2.8.0
+ * GIO >= 2.0 (optional)
  * Geany >= 0.17
 
 
